		Added transition code for shifting away from using
		GtkItemFactoryEntry (also will help with OSX menubar 
		integration which expects menu shells).
		Added support for native Quartz menu bars.
		Removed --enable-quartz as it is auto detected now if
		PKG_CHECK_MODULES(GTK_MAC, gtk-mac-integration) is
		true and GDK is compiled against Quartz.
		Fixed pointer crashes on NULL returned on gtk_entry_get_text()
		on OSX/Quartz.
		Recommended usage for Quartz is now jhbuild with
		gtk-mac-integration, not MacPorts.
		Added mac bundle info in contrib/bundle_for_osx.
		Added gtkwave_argv0_cached as Open New Window does not work if
		"gtkwave" is not in path or is something like gtkwave-bin as
		in an OSX bundle.
		Detect context swapping in file chooser from DnD to prevent
		possible crashes.
		Block DnD while file chooser is active.
		Migrate OSX to OSX key accelerators.
		Fix for tcl code opening the root node.
		Fix time warp cmd->control mapping for OSX.
		Fix for time warped traces not rendering properly when
		x-coordinate overdraw is detected.
		Added WAVE_ALLOW_QUARTZ_FLUSH_WORKAROUND temporarily which
		needs to be set at compile time which gates redraw.
		Add GLOBALS->force_hide_show to force redraws in OSX.
		Added osx_timer() which controls forced redraw.
		Abort GHW read when nbr_el<0: indicates malformed file from
		variable/signal construct of form (7 to 0) rather than downto.
		Crash fix for non-string len zero facilities in vcd2fst.
		Fixed overflow in draw_hptr_trace_vector_analog().
		Added rtlbrowse and vcd2fst binary path finding code to OSX.
		Changed ps2pdf to pstopdf on Mac.
		Fixed broken wave_script_args.
		Reverted to 3.3.26 code in menu_func() as the renderbox
		requester did not work from TCL anymore.
		Catch NSApplicationOpenFile so files can be opened from Finder.
		Added --chdir command line option to support open for OSX so
		that gtkwave can be run at the command line directly from its
		installed gtkwave.app.